[package]
name = "ranim"
version = "0.1.0"
authors = ["mwbryant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"resvg" = "0.11.0"
"svg" = "0.8.0"
"usvg" = "0.11.0"
"png" = "0.16.7"

[dev-dependencies]
"criterion" = "0.3"
[[bench]]
name = "static_frame"
harness = false
